--- a/01-ec2-r53.yaml
+++ b/01-ec2-r53.yaml
@@ -33,11 +33,11 @@
   #   ansible.builtin.debug: 
   #     msg: "{{ item.instances[0].private_ip_address }}"
   #   loop: "{{ ec2_output.results }}" 
-  - name: create rout53 record
+  - name: create route53 record
     amazon.aws.route53:
       state: present
       zone: "{{ domain_name }}"   
-      record: "{{ item.item }}. {{ domain_name }}"
+      record: "{{ item.item }}.{{ domain_name }}"
       type: A
       ttl: 1
       value: "{{ item.instances[0].private_ip_address }}"
