--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,14 @@
-[catalogue]
-172.31.24.8
+[mongodb]
+mongodb.daws86.uno
+
+[redis]
+redis.daws86.uno
+
+[mysql]
+mysql.daws86.uno
+
+[rabbitmq]
+rabbitmq.daws86.uno
 
 [frontend]
 172.31.30.172
@@ -9,6 +18,11 @@
 
 [local]
 localhost
+
+[all:vars]
+ansible_user=ec2-user
+ansible_password=DevOps321
+
 
 [local:vars] #groupname with vars
 NAME=from inventory
