--- a/redis.yaml
+++ b/redis.yaml
@@ -20,10 +20,10 @@
       replace: '0.0.0.0'
 
   - name: disable protected module
-    ansible.builtin.replace:
+    ansible.builtin.lineinfile:
       path: /etc/redis/redis.conf
       regexp: 'protected-mode'
-      line: 'protected-mode-no'  
+      line: 'protected-mode no'  
 
   - name: start and enable redis
     ansible.builtin.service:
