--- a/01-ec2-r53.yaml
+++ b/01-ec2-r53.yaml
@@ -8,6 +8,8 @@
     domain_name: "daws86.uno"
     instances:
     - mongodb
+    - redis
+    - mysql
   tasks:
   - name: create ec2 instance  
     amazon.aws.ec2_instance:
