--- a/redis.yaml
+++ b/redis.yaml
@@ -6,7 +6,7 @@
     ansible.builtin.command: dnf module disable redis -yes
 
   - name: enable redis 7
-    ansible.builtin.command: dnf module enable redis:7 -ye  
+    ansible.builtin.command: dnf module enable redis:7 -yes  
 
   - name: install redis
     ansible.builtin.package:
