--- a/01-ec2-r53.yaml
+++ b/01-ec2-r53.yaml
@@ -7,10 +7,11 @@
     zone_id: "Z030871239XA8Q2CXDTS4"
     domain_name: "daws86.uno"
     instances:
-    - mongodb
-    - redis
-    - mysql
-    - rabbitmq
+    #we can pass instances through command line using -e
+    # - mongodb
+    # - redis
+    # - mysql
+    # - rabbitmq
   tasks:
   - name: create ec2 instance  
     amazon.aws.ec2_instance:
