--- a/inventory.ini
+++ b/inventory.ini
@@ -10,11 +10,14 @@ mysql.daws86.uno
 [rabbitmq]
 rabbitmq.daws86.uno
 
-[frontend]
-172.31.30.172
+[catalogue]
+catalogue.daws86.uno
 
 [cart]
-172.31.24.8
+cart.daws86.uno
+
+[user]
+user.daws86.uno
 
 [local]
 localhost
