--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -5,11 +5,11 @@
   - name: disable default nodejs
     ansible.builtin.command: dnf module disable nodejs -y
 
-  - name: enable default nodejs 20
+  - name: enable nodejs 20
     ansible.builtin.command: dnf module enable nodejs:20 -y 
 
   - name: install nodejs
-    ansible.builtin.pacakge:
+    ansible.builtin.package:
       name: nodejs
       state: present
 
