--- a/01-ec2-r53.yaml
+++ b/01-ec2-r53.yaml
@@ -8,10 +8,10 @@
     domain_name: "daws86.uno"
     instances:
     #we can pass instances through command line using -e
-    - mongodb
-    - redis
-    - mysql
-    - rabbitmq
+    # - mongodb
+    # - redis
+    # - mysql
+    # - rabbitmq
   tasks:
   - name: create ec2 instance  
     amazon.aws.ec2_instance:
