--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -50,7 +50,7 @@
   - name: copy mongo repo
     ansible.builtin.copy:
       src: mongo.repo
-      dest: /etc/yum.reposd/mongo.repo
+      dest: /etc/yum.repos.d/mongo.repo
 
   - name: install mongodb client
     ansible.builtin.package:
