--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -63,6 +63,7 @@
 
   - name: evaluate catalogue database
     community.mongodb.mongodb_shell:
+      login_host: mongodb.daws86.uno
       eval: db.getMongo().getDBNames().indexOf('catalogue')
     register: catalogue_output  
 
