--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -57,16 +57,20 @@
       name: mongodb-mongosh
       state: present
 
-  # - name: connect to mongodb catalogue
-  #   ansible.builtin.command: mongosh mongodb.daws86.uno --quiet --eval "db.getMongo() .getDBNames() .indexOf('catalogue')"                
-  #   register: catalogue_output
+  - name: connect to mongodb catalogue
+    ansible.builtin.command: mongosh mongodb.daws86.uno --quiet --eval "db.getMongo() .getDBNames() .indexOf('catalogue')"                
+    register: catalogue_output
 
-  - name: evaluate catalogue database
-    community.mongodb.mongodb_shell:
-      login_host: mongodb.daws86.uno
-      eval: db.getMongo().getDBNames().indexOf('catalogue')
-    register: catalogue_output  
+  # - name: evaluate catalogue database
+  #   community.mongodb.mongodb_shell:
+  #     login_host: mongodb.daws86.uno
+  #     eval: db.getMongo().getDBNames().indexOf('catalogue')
+  #   register: catalogue_output  
 
   - name: print catalogue output 
     ansible.builtin.debug:
-      msg: "{{ catalogue_output }}"           
+      msg: "{{ catalogue_output }}"  
+
+  # - name: load products into mongodb
+  #   ansible.builtin.shell: mongosh --host mongodb.daws86.uno </app/master-data.js
+
