--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -73,4 +73,10 @@
 
   - name: load products into mongodb
     ansible.builtin.shell: mongosh --host mongodb.daws86.uno </app/master-data.js
-    when: catalogue_output.stdout < 0
+    when: catalogue_output.stdout | int < 0
+
+  - name: start and enable catalogue
+    ansible.builtin.service:
+      name: catalogue
+      enabled: yes
+      state: started
