--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -67,9 +67,9 @@
   #     eval: db.getMongo().getDBNames().indexOf('catalogue')
   #   register: catalogue_output  
 
-  - name: print catalogue output 
-    ansible.builtin.debug:
-      msg: "{{ catalogue_output }}"  
+  # - name: print catalogue output 
+  #   ansible.builtin.debug:
+  #     msg: "{{ catalogue_output }}"  
 
   - name: load products into mongodb
     ansible.builtin.shell: mongosh --host mongodb.daws86.uno </app/master-data.js
