--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -20,12 +20,21 @@
       system: true
       shell: /sbin/nologin
       home: /app
-
+# safe to remove directory, because 2nd time if we run it will download freshly. no error if does not exist
+  - name: remove app directory
+    ansible.builtin.file:
+      path: /app
+      state: absent
 
   - name: create app directory
     ansible.builtin.file:
       state: directory
       path: /app
+
+  - name: Delete catalogue file
+    ansible.builtin.file:
+      path: /tmp/catalogue.zip
+      state: absent    
 
   - name: download catalogue application
     ansible.builtin.get_url:
@@ -75,8 +84,15 @@
     ansible.builtin.shell: mongosh --host mongodb.daws86.uno </app/db/master-data.js
     when: catalogue_output.stdout | int < 0
 
-  - name: start and enable catalogue
-    ansible.builtin.service:
+  # - name: start and enable catalogue
+  #   ansible.builtin.service:
+  #     name: catalogue
+  #     enabled: yes
+  #     state: started
+
+  - name: daemon reload enable and start
+    ansible.builtin.systemd_service:
       name: catalogue
-      enabled: yes
+      enabled: true
       state: started
+      daemon_reload: true
