--- a/inventory.ini
+++ b/inventory.ini
@@ -19,6 +19,15 @@ cart.daws86.uno
 [user]
 user.daws86.uno
 
+[shipping]
+shipping.daws86.uno
+
+[payment]
+payment.daws86.uno
+
+[frontend]
+forntend.daws86.uno
+
 [local]
 localhost
 
